fixing episodes page on small devices

--- a/src/components/Episodes/Episode.css
+++ b/src/components/Episodes/Episode.css
@@ -4,6 +4,10 @@
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 2rem;
+}
+
+.episode-img-container {
+  width: 100;
   position: relative;
 }
 
@@ -21,7 +25,7 @@
   font-size: 1.3rem;
   font-weight: 600;
   position: absolute;
-  top: 8rem;
+  top: 40%;
   z-index: 1;
   cursor: pointer;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2), 0px 6px 10px rgba(0, 0, 0, 0.2);
@@ -64,5 +68,9 @@
 
   .btn-previous {
     left: 0;
+  }
+
+  .episode {
+    width: 100%;
   }
 }
