--- a/src/components/UI/SearchInput.css
+++ b/src/components/UI/SearchInput.css
@@ -12,6 +12,12 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2), 0px 6px 10px rgba(0, 0, 0, 0.2);
 }
 
+@media screen and (min-width: 1460px) {
+  .searchInput {
+    width: 95%;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .searchInput {
     width: 65rem;
@@ -33,5 +39,11 @@
 @media screen and (max-width: 650px) {
   .searchInput {
     width: 26rem;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .searchInput {
+    width: 100%;
   }
 }
